Deploy-Service-ingress-ecommerce.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ecommercetic-back
  namespace: desarrollo
  labels:
    app: ecommercetic-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommercetic-back
  template:
    metadata:
      labels:
        app: ecommercetic-back
    spec:
      containers:
        - name: ecommercetic-back
          image: acreastest.azurecr.io/ecommercetic-back:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: svc-ecommercetic-back
  namespace: desarrollo
  labels:
    app: ecommercetic-back
spec:
  type: ClusterIP
  selector:
    app: ecommercetic-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecommercetic-back
  namespace: desarrollo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-ecommercetic-back
                port:
                  number: 80
